--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.google.firebase:firebase-database:11.8.0'
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    compile 'ai.api:sdk:2.0.7@aar'
+    compile 'ai.api:libai:1.6.12'
 }
 apply plugin: 'com.google.gms.google-services'
